resolve table overlapping

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,35 +2,12 @@
   font-family: "Source Sans Pro", sans-serif;
 }
 
-.cd__main{
-  padding: 0;
-  margin: 0;
-  width: 100%;
-  height: 100vh;
-  background: #cb38e9;
-  position: relative;
-  background: radial-gradient(circle, #cb38e9 0%, #842fa8 100%) !important;
-}
-
-.cd__main p {
-  font-size: 0.75em;
-  font-weight: bold;
-  position: absolute;
-  top: 15%;
-  width: 100%;
-  letter-spacing: 5px;
-  text-transform: uppercase;
-  text-align: center;
-  color: white;
-  user-select: none;
-}
-
 .draggable-table {
   position: absolute;
-  top: 25%;
+  top: 40%;
   left: 20%;
   width: 60%;
-  height: 50%;
+  height: 0%;
   border-collapse: collapse;
   background: white;
   -webkit-box-shadow: 0px 0px 10px 8px rgba(0, 0, 0, 0.1);
@@ -51,7 +28,7 @@
   opacity: 1;
 }
 .draggable-table thead th {
-  height: 25px;
+  height: 1px;
   font-weight: bold;
   text-transform: capitalize;
   padding: 10px;
